<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.register.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:contentDescription="@string/register_image" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        app:layout_constraintTop_toBottomOf="@+id/register_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="@dimen/app_small_margin"/>
    <TextView
        android:id="@+id/register_text_we_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/smallText"
        android:text="@string/register_text_we_sent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"
        android:layout_marginVertical="@dimen/app_small_margin"
        android:gravity="center"/>

    <EditText
        style="@style/editText"
        android:layout_width="wrap_content"
        android:id="@+id/register_input_code"
        app:layout_constraintTop_toBottomOf="@+id/register_text_we_sent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/enter_code_six_digit_hint"
        android:autofillHints=""
        android:maxLength="6"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>