<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:src="@drawable/default_photo"
            app:civ_border_width="@dimen/settings_user_photo_border"
            android:background="@color/colorAccent"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settings_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/settings_default_username"
            android:textSize="@dimen/normal_text"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo"
            android:layout_marginTop="@dimen/vertical_margin"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccentDark"
            android:text="@string/settings_default_status"
            android:textSize="@dimen/small_text"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_user_name"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_account"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+996559202004"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>